log/build_2026-06-16_14-48-49/localization_system/stdout_stderr.log
-- The C compiler identification is GNU 13.3.0
-- The CXX compiler identification is GNU 13.3.0
-- Detecting C compiler ABI info
-- Detecting C compiler ABI info - done
-- Check for working C compiler: /usr/bin/cc - skipped
-- Detecting C compile features
-- Detecting C compile features - done
-- Detecting CXX compiler ABI info
-- Detecting CXX compiler ABI info - done
-- Check for working CXX compiler: /usr/bin/c++ - skipped
-- Detecting CXX compile features
-- Detecting CXX compile features - done
-- Found ament_cmake: 2.7.5 (/opt/ros/kilted/share/ament_cmake/cmake)
-- Found Python3: /usr/bin/python3 (found version "3.12.3") found components: Interpreter 
-- Found rclcpp: 29.5.7 (/opt/ros/kilted/share/rclcpp/cmake)
-- Found rosidl_generator_c: 4.9.6 (/opt/ros/kilted/share/rosidl_generator_c/cmake)
-- Found rosidl_generator_cpp: 4.9.6 (/opt/ros/kilted/share/rosidl_generator_cpp/cmake)
-- Using all available rosidl_typesupport_c: rosidl_typesupport_fastrtps_c;rosidl_typesupport_introspection_c
-- Using all available rosidl_typesupport_cpp: rosidl_typesupport_fastrtps_cpp;rosidl_typesupport_introspection_cpp
-- Found rmw_implementation_cmake: 7.8.2 (/opt/ros/kilted/share/rmw_implementation_cmake/cmake)
-- Found rmw_fastrtps_cpp: 9.3.3 (/opt/ros/kilted/share/rmw_fastrtps_cpp/cmake)
-- Found OpenSSL: /usr/lib/aarch64-linux-gnu/libcrypto.so (found version "3.0.13")  
-- Using RMW implementation 'rmw_fastrtps_cpp' as default
-- Found sensor_msgs: 5.5.2 (/opt/ros/kilted/share/sensor_msgs/cmake)
-- Found nav_msgs: 5.5.2 (/opt/ros/kilted/share/nav_msgs/cmake)
-- Found robot_localization: 3.9.4 (/opt/ros/kilted/share/robot_localization/cmake)
-- Found eigen3_cmake_module: 0.4.0 (/opt/ros/kilted/share/eigen3_cmake_module/cmake)
-- Found Eigen3: TRUE (found version "3.4.0") 
-- Ensuring Eigen3 include directory is part of orocos-kdl CMake target
CMake Deprecation Warning at /opt/ros/kilted/share/ament_cmake_target_dependencies/cmake/ament_target_dependencies.cmake:87 (message):
  ament_target_dependencies() is deprecated.  Use target_link_libraries()
  with modern CMake targets instead.  Try replacing this call with:

    target_link_libraries(imu_driver PUBLIC
      ${sensor_msgs_TARGETS}
      rclcpp::rclcpp
      sensor_msgs::sensor_msgs_library
    )

Call Stack (most recent call first):
  CMakeLists.txt:21 (ament_target_dependencies)


CMake Deprecation Warning at /opt/ros/kilted/share/ament_cmake_target_dependencies/cmake/ament_target_dependencies.cmake:87 (message):
  ament_target_dependencies() is deprecated.  Use target_link_libraries()
  with modern CMake targets instead.  Try replacing this call with:

    target_link_libraries(gps_driver PUBLIC
      ${sensor_msgs_TARGETS}
      rclcpp::rclcpp
      sensor_msgs::sensor_msgs_library
    )

Call Stack (most recent call first):
  CMakeLists.txt:25 (ament_target_dependencies)


-- Configuring done (3.3s)
-- Generating done (0.0s)
-- Build files have been written to: /home/tractor/ros2_ws/build/localization_system
[ 25%] [32mBuilding CXX object CMakeFiles/imu_driver.dir/src/imu_driver.cpp.o[0m
[ 50%] [32mBuilding CXX object CMakeFiles/gps_driver.dir/src/gps_driver.cpp.o[0m
/home/tractor/ros2_ws/src/localization_system/src/gps_driver.cpp: In member function ‘void GpsDriverNode::serial_loop()’:
/home/tractor/ros2_ws/src/localization_system/src/gps_driver.cpp:201:94: error: ‘COVARIANCE_TYPE_DIAGONAL’ is not a member of ‘sensor_msgs::msg::NavSatFix’ {aka ‘sensor_msgs::msg::NavSatFix_<std::allocator<void> >’}
  201 |                             fix_msg_.position_covariance_type = sensor_msgs::msg::NavSatFix::COVARIANCE_TYPE_DIAGONAL;
      |                                                                                              ^~~~~~~~~~~~~~~~~~~~~~~~
gmake[2]: *** [CMakeFiles/gps_driver.dir/build.make:76: CMakeFiles/gps_driver.dir/src/gps_driver.cpp.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:165: CMakeFiles/gps_driver.dir/all] Error 2
gmake[1]: *** Waiting for unfinished jobs....
[ 75%] [32m[1mLinking CXX executable imu_driver[0m
[ 75%] Built target imu_driver
gmake: *** [Makefile:146: all] Error 2
